Fixed gap top of headers on about and projects

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -9,7 +9,7 @@
   }
 
   header{
-    margin-top: 30px;
+
     background-color: var(--secondary-color);
     padding: 80px;
   }
